--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,1 +1,15 @@
-<!-- START -->
+---
+title: "Page Not Found"
+excerpt: "Page not found. Your pixels are in another canvas."
+permalink: /404.html
+author_profile: false
+---
+
+Page not found
+
+<script>
+  var GOOG_FIXURL_LANG = 'en';
+  var GOOG_FIXURL_SITE = 'https://taewanlee.github.io/'
+</script>
+<script src="https://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
+</script>
